add toolbox LMTir and modification of the functions for loadeing external libraries

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/libs/matlab2tikz"]
 	path = src/libs/matlab2tikz
 	url = https://github.com/matlab2tikz/matlab2tikz.git
+[submodule "src/libs/lmtir"]
+	path = src/libs/lmtir
+	url = git@bitbucket.org:guuk/lmtir.git
