--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/matlab2tikz/matlab2tikz.git
 [submodule "src/libs/lmtir"]
 	path = src/libs/lmtir
-	url = git@bitbucket.org:guuk/lmtir.git
+	url = git@bitbucket.org:luclaurent/lmtir.git
 [submodule "src/libs/MultiDOE"]
 	path = src/libs/MultiDOE
-	url = git@bitbucket.org:guuk/multidoe.git
+	url = git@bitbucket.org:luclaurent/multidoe.git
